--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,32 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="/css/styles.css">
 	<title></title>
 </head>
-<body>
-	<p>Welcome to the chat app</p>
+<body class="chat">
+	<div class="chat__sidebar">
+		
+		<h3>People</h3>
+		<div id="users">
+			
+		</div>
+	</div>
+	<div class="chat__main">
+		
+		<ol id="messages" class="chat__messages"></ol>
 
-	<ol id="messages"></ol>
+		<div class="chat__footer">
+			<form id="message-form">
+				<input type="text" name="message" placeholder="Message" autofocus autocomplete="off">
+				<button>Send</button>
+			</form>
+			<button id="send-location">Send Location</button>
+		</div>
 
-	<form id="message-form">
-		<input type="text" name="message" placeholder="Message">
-		<button>Send</button>
-	</form>
-	<button id="send-location">Send Location</button>
+
+	</div>
+
 
 
 
